changed gender from man/woman to male/female as these are the gender names (accessibility check))

--- a/views/users/updateSettings.handlebars
+++ b/views/users/updateSettings.handlebars
@@ -1,46 +1,44 @@
 <div class="onboarding">
-    <h2 class="neon">CREATE ACCOUNT</h2>
-    <form id="onboardingForm" action="/users/onboarding" method="post">
+    <h2 class="neon">Settings</h2>
+    <form id="onboardingForm" method="post">
         <section>
             <label for="firstName">
                 First Name
-                <input id="firstName" type="text" name="firstName" placeholder="First Name" value="{{user.firstName}}" required/>
+                <input id="firstName" type="text" name="firstName" value={{firstName}} readonly/>
             </label>
 
-            <label for="birthday">
+            <label for="bDay">
                 Birthday (mm/dd/yyyy)
-                <input id="birthday" type="text" name="birthday" placeholder="mm/dd/yyyy" value="{{user.birthday}}" required/>
+                <input id="birthday" type="text" name="birthday" value={{birthday}} readonly/>
             </label>
 
             <div id="borderContainer">
                 <div class="borderInput">
                     <label id="genderLabel">Gender</label>
                     <div class="multipleInputContainer">
-                        <input id="genderMan" type="radio" name="gender" value="man" {{radioChecked 'man' user.gender}}/>
-                        <label for="genderMan">Male</label>
-                        <input id="genderWoman" type="radio" name="gender" value="woman" {{radioChecked 'woman' user.gender}} required/>
-                        <label for="genderWoman">Female</label>
-                        <input id="genderOther" type="radio" name="gender" value="other" {{radioChecked 'other' user.gender}}/>
+                        <input id="genderMan" type="radio" name="gender" value="man" {{isMan}}/>
+                        <label for="genderMan">Man</label>
+                        <input id="genderWoman" type="radio" name="gender" value="woman" {{isWoman}} required/>
+                        <label for="genderWoman">Woman</label>
+                        <input id="genderOther" type="radio" name="gender" value="other" {{isOther}}/>
                         <label for="genderOther">Other</label>
                     </div>
                 </div>
 
                 <div class="borderInput">
                     <label for="showGender" id="showGenderLabel">Show gender on my profile</label>
-                    <input id="showGender" type="checkbox" name="showGender"
-                    {{#if (checkboxChecked user.showGender)}}
-                        checked
-                    {{/if}}>
+                    <input type="hidden" name="showGender" value={{showGender}}>
+                    <input id="showGender" type="checkbox" name="showGender" {{showGenderBool}}>
                 </div>
 
                 <div class="borderInput">
                     <label id="pronounsLabel">Pronouns</label>
                     <div class="multipleInputContainer">
-                        <input id="pronounsMan" type="radio" name="pronouns" value="he/him" {{radioChecked 'he/him' user.pronouns}}/>
+                        <input id="pronounsMan" type="radio" name="pronouns" value="he/him" {{isHe}}/>
                         <label for="pronounsMan">He/Him</label>
-                        <input id="pronounsWoman" type="radio" name="pronouns" value="she/her" {{radioChecked 'she/her' user.pronouns}} required/>
+                        <input id="pronounsWoman" type="radio" name="pronouns" value="she/her" {{isShe}} required/>
                         <label for="pronounsWoman">She/Her</label>
-                        <input id="pronounsOther" type="radio" name="pronouns" value="other" {{radioChecked 'other' user.pronouns}}/>
+                        <input id="pronounsOther" type="radio" name="pronouns" value="other" {{isOtherPronoun}}/>
                         <label for="pronounsOther">Other</label>
                     </div>
                 </div>
@@ -48,17 +46,15 @@
                 <div class="borderInput">
                     <div class="showPronouns">
                         <label for="showPronouns" id="showPronounsLabel">Show pronouns on my profile</label>
-                        <input id="showPronouns" type="checkbox" name="showPronouns"
-                        {{#if (checkboxChecked user.showPronouns)}}
-                           checked
-                        {{/if}}>
+                        <input type="hidden" name="showPronouns" value={{showPronouns}}>
+                        <input id="showPronouns" type="checkbox" name="showPronouns" {{showPronounsBool}}>
                     </div>
                 </div>
             </div>
 
             <label for="about">
                 About me
-                <input id="about" type="text" name="about" placeholder="Just a person looking for love..." value="{{user.about}}">
+                <input id="about" type="text" name="about" value="{{aboutMe}}">
             </label>
             <div class="form-group hidden" id="error-container">
                 <div class="alert alert-danger text-goes-here">
@@ -68,7 +64,7 @@
         <section>
             <div class="multi-select-container">
                 <label for="interests">Interests<br>(Select 3-10)</label>
-                <select multiple id="interests" name="interests" size="32" required>
+                <select id="interests" name="interests" multiple size="33" required>
                     <optgroup label="Active Life">
                         <option value="amusementparks">Amusement Parks</option>
                         <option value="aquariums">Aquariums</option>
@@ -148,16 +144,17 @@
                 </select>
             </div>
             <div>
-                <button id="onboardingButton" type="submit" class="homepage-buttons">Submit</button>
+                <button id="onboardingButton" type="submit" class="homepage-buttons">Save</button><br>
+                <a href="/users/dashboard" class="redirect-to-login">Back to dashboard</a>
             </div>
+            <input name= '_method' value="patch" type="hidden"/>
         </section>
-        <input name= '_method' value="patch" type="hidden"/>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
             crossorigin="anonymous"></script>
-    <script src="/public/js/onboarding.js"></script>
+    <script src="/public/js/updateSettings.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
             integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
             crossorigin="anonymous"></script>
