Revert "changed gender from man/woman to male/female as these are the gender …"

--- a/views/users/onboarding.handlebars
+++ b/views/users/onboarding.handlebars
@@ -17,9 +17,9 @@
                     <label id="genderLabel">Gender</label>
                     <div class="multipleInputContainer">
                         <input id="genderMan" type="radio" name="gender" value="man" {{radioChecked 'man' user.gender}}/>
-                        <label for="genderMan">Male</label>
+                        <label for="genderMan">Man</label>
                         <input id="genderWoman" type="radio" name="gender" value="woman" {{radioChecked 'woman' user.gender}} required/>
-                        <label for="genderWoman">Female</label>
+                        <label for="genderWoman">Woman</label>
                         <input id="genderOther" type="radio" name="gender" value="other" {{radioChecked 'other' user.gender}}/>
                         <label for="genderOther">Other</label>
                     </div>
