should pass all tota11y tests now

--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -14,8 +14,8 @@
     <div class="popup">
         <h2 id="popupH2"></h2>
         <div id="popupInnerDiv">
-            <img id="popupMatchImg1" src="{{user.images.profilePic}}">
-            <img id="popupMatchImg2" src="">
+            <img id="popupMatchImg1" alt="" src="{{user.images.profilePic}}">
+            <img id="popupMatchImg2" alt="" src="">
         </div>
         <b class="close">x</b>
     </div>
