--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,27 +18,27 @@
                 </div>
                 <hr>
                 <a href="/users/dashboard" class="sub-menu-link">
-                    <img src="/public/images/icons/homepage_icon.png" alt="Return to Homepage">
+                    <img src="/public/images/icons/homepage_icon.png" alt="">
                     <p>Home</p>
                     <span>></span>
                 </a>
                 <a href="/users/onboarding" class="sub-menu-link">
-                    <img src="/public/images/icons/edit_profile_icon.png" alt="Edit Profile">
+                    <img src="/public/images/icons/edit_profile_icon.png" alt="">
                     <p>Edit Profile</p>
                     <span>></span>
                 </a>
                 <a href="/users/onboarding/filters" class="sub-menu-link">
-                    <img src="/public/images/icons/update_filters_icon.png" alt="Edit Dating Filters">
+                    <img src="/public/images/icons/update_filters_icon.png" alt="">
                     <p>Update Filters</p>
                     <span>></span>
                 </a>
                 <a href="/users/onboarding/images" class="sub-menu-link">
-                    <img src="/public/images/icons/update_photos_icon.webp" alt="Edit Photos">
+                    <img src="/public/images/icons/update_photos_icon.webp" alt="">
                     <p>Update Photos</p>
                     <span>></span>
                 </a>
                 <a href="/users/logout" class="sub-menu-link">
-                    <img src="/public/images/icons/sign_out_icon.png" alt="Logout">
+                    <img src="/public/images/icons/sign_out_icon.png" alt="">
                     <p>Sign Out</p>
                     <span>></span>
                 </a>
