minor css to accomodate for full screen

--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -998,8 +998,8 @@ h2 {
 
 .businessDiv {
     display: flex;
-    justify-content: flex-start;
-    width: 50%;
+    text-align: center;
+    width: 60%;
     margin: 35px auto;
 }
 
