--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -1,7 +1,7 @@
-<h2 class="neon" id="dashH2">DateSpot</h2>
+<h1 class="neon" id="dashH1">DateSpot</h1>
 <div class="dashboard">
     <div class="matches-container">
-        <h3>Matches</h3>
+        <h2>Matches</h2>
         <ul id="matchesListUl">
         </ul>
     </div>
@@ -12,10 +12,12 @@
         <ion-icon id="like" name="heart-circle-outline"></ion-icon>
     </div>
     <div class="popup">
-        <h2 id="popupH2"></h2>
+        <h1 id="popupH1"></h1>
         <div id="popupInnerDiv">
+            {{#if user.images.profilePic}}
             <img id="popupMatchImg1" alt="" src="{{user.images.profilePic}}">
             <img id="popupMatchImg2" alt="" src="">
+            {{/if}}
         </div>
         <b class="close">x</b>
     </div>
