--- a/views/users/filters.handlebars
+++ b/views/users/filters.handlebars
@@ -1,8 +1,8 @@
 <div>
     <form id="filtersForm" method="post">
-        <h2 class="neon">CREATE ACCOUNT</h2>
+        <h1 class="neon">CREATE ACCOUNT</h1>
         <div id="locationContainer">
-            <h2 id="filtersH2">Filters</h2>
+            <h1 id="filtersH1">Filters</h1>
             <div id="filtersBorder" class="slideContainer">
                 <div id="genderInterestBorder">
                     <label id="genderInterestLabel">Who are you interested in?</label>
@@ -37,7 +37,7 @@
             </div>
             <button type="submit" class="homepage-buttons">Submit</button>
         </div>
-        <input name= '_method' value="patch" type="hidden"/>
+        <input name= '_method' value="patch" type="hidden">
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
