--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -16,7 +16,13 @@ p {
 
 }
 
-h2 {
+h1 {
+    color: white;
+    margin-top: 0;
+    font-size: 60px;
+}
+
+h3 {
     color: white;
 }
 
@@ -26,8 +32,6 @@ label {
 
 #homepageH1 {
     color: #fff;
-    margin-top: 0;
-    font-size: 60px;
     text-shadow:
             0 0 7px #fff,
             0 0 10px #fff,
@@ -120,7 +124,7 @@ nav {
 
  /*Home Page*/
 
-#dashH1 {
+#dashH2 {
     font-size: 50px;
     margin: 0;
 }
@@ -194,7 +198,7 @@ nav {
     margin-top: 10px;
 }
 
-h1 {
+h2 {
     color: white;
 }
 
@@ -205,7 +209,7 @@ h1 {
 }
 
 
-.onboarding form div {
+.onboarding form section {
     display: flex;
     flex-direction: column;
     vertical-align: middle;
@@ -431,7 +435,7 @@ h1 {
     /*width: max-content;*/
 }
 
-#imagesContainer h2 {
+#imagesContainer h3 {
     margin-bottom: 0;
 }
 
@@ -452,7 +456,7 @@ h1 {
 }
 
 /* Dashboard Page */
-.dashboard h2 {
+.dashboard h3 {
     font-size: 30px;
     font-weight: bold;
 }
@@ -753,7 +757,7 @@ h1 {
 
 }
 
-.popup h1 {
+.popup h2 {
     color: black;
 }
 
@@ -875,7 +879,7 @@ h1 {
     margin-top: 30px;
 }
 
-.profileCard h1 {
+.profileCard h2 {
     font-size: 35px;
 }
 
@@ -926,7 +930,7 @@ h1 {
     margin-top: 50px;
 }
 
-.chatContainer h2 {
+.chatContainer h3 {
     margin: 0;
 }
 
@@ -970,7 +974,7 @@ h1 {
     overflow-y: auto;
 }
 
-#dateSpotsContainer h2 {
+#dateSpotsContainer h3 {
     margin-top: 30px;
     margin-bottom: 3px;
 }
