technically improving html according to error checker by adding invisible headers

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,7 +48,7 @@
         </div>
         <img alt="Menu Button" src="/public/images/Hamburger_menu_icon.jpg" class="hamburgerMenu" onclick="toggleMenu();" hidden>
     </nav>
-    <h1 hidden>Almost every page starts with h2 instead of h1 for some reason, so it's either this or rewrite some of the html</h1>
+    <h1 hidden>DateSpot</h1>
     <main>
         {{{body}}}
     </main>
