--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -2,7 +2,7 @@
     <h2 class="neon">LOG IN</h2>
     <form id="loginForm" action="/users/login" method="post">
         <section>
-            <h3 hidden>Sections require headers and changint this to a div messes with formatting, so here we go again</h3>
+            <h3 hidden>Login</h3>
             <label for="email">
                 Email
                 <input id="email" name="userEmail" placeholder="Email" value="" required>
