--- a/views/users/signup.handlebars
+++ b/views/users/signup.handlebars
@@ -2,7 +2,7 @@
     <h2 class="neon">CREATE ACCOUNT</h2>
     <form id="signupForm" action="/users/signup" method="post">
         <section>
-            <h3 hidden>Sections should have headers, but changing this section to a div messes with formatting, so here we go again</h3>
+            <h3 hidden>Signup</h3>
             <label for="email">
                 Email
                 <input id="email" type="email" name="userEmail" placeholder="Email" value="" required>
