fixed html on every page except for images

--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -12,11 +12,11 @@
         <ion-icon id="like" name="heart-circle-outline"></ion-icon>
     </div>
     <div class="popup">
-        <h2 id="popupH2"></h2>
+        <h2 id="popupH2">You found a match</h2>
         <div id="popupInnerDiv">
             {{#if user.images.profilePic}}
             <img id="popupMatchImg1" alt="" src="{{user.images.profilePic}}">
-            <img id="popupMatchImg2" alt="" src="">
+            <img id="popupMatchImg2" alt="" src="../../../public/images/image-placeholder.png">
             {{/if}}
         </div>
         <b class="close">x</b>
