--- a/views/users/filters.handlebars
+++ b/views/users/filters.handlebars
@@ -8,7 +8,7 @@
                     <label id="genderInterestLabel">Who are you interested in?</label>
                     <div class="multipleInputContainer">
                         <select id="genderInterest" name="genderInterest" required>
-                            <option disabled="disabled" selected="selected">Select Gender</option>
+                            <option disabled="disabled" selected="selected" value="">Select Gender</option>
                             <option value="men">Men</option>
                             <option value="women">Women</option>
                             <option value="everyone">Everyone</option>
@@ -23,7 +23,7 @@
             </div>
             <div class="slideContainer">
                 <label for="maxAge">Max Age: </label>
-                <label id="maxAgeLabel" for="maxRange"></label>
+                <label id="maxAgeLabel" for="maxAge"></label>
                 <input type="range" min="18" max="60" value="50" class="slider" id="maxAge">
             </div>
             <div class="slideContainer">
