--- a/views/users/onboarding.handlebars
+++ b/views/users/onboarding.handlebars
@@ -1,7 +1,7 @@
 <div class="onboarding">
     <h2 class="neon">CREATE ACCOUNT</h2>
     <form id="onboardingForm" action="/users/onboarding" method="post">
-        <section>
+        <section id="onboardingSection1">
             <h3 hidden>Basic Info</h3>
             <label for="firstName">
                 First Name
