--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -473,7 +473,7 @@ h2 {
 
 /* Dashboard Page */
 .dashboard h3 {
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
 }
 
@@ -487,8 +487,8 @@ h2 {
 }
 
 #swiper {
-    height: 500px;
-    width: 70%;
+    height: 100%;
+    width: 300px;
     aspect-ratio: 2 / 3;
     perspective: 1000px;
     perspective-origin: center 50%;
@@ -499,8 +499,7 @@ h2 {
 }
 
 .card {
-    /*width: 100%;*/
-    height: 600px;
+    height: 550px;
     position: absolute;
     /*transform: translateZ(calc(-30px * var(--i)))*/
     /*translateY(calc(-20px * var(--i))) rotate(calc(-4deg * var(--i)));*/
@@ -510,8 +509,8 @@ h2 {
 }
 
 .card img {
-    width: 85%;
-    height: 75%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: 50% 50%;
     border-radius: 20px;
@@ -521,7 +520,7 @@ h2 {
     display: flex;
     float: right;
     margin-left: 100px;
-    width: 400px;
+    width: 500px;
 }
 
 .matches-container {
@@ -531,12 +530,12 @@ h2 {
 }
 
 #like, #dislike {
-    font-size: 50px;
+    font-size: 70px;
     border-radius: 50%;
     position: relative;
     z-index: 1;
     color: white;
-    top: 50%;
+    top: 67%;
     animation-name: iconAnimation1;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
@@ -547,12 +546,14 @@ h2 {
 #dislike {
     color: black;
     background-color: rgba(255, 255, 255, 0.5);
+    margin-right: 20px;
 
 }
 
 #like {
     color: red;
     background-color: rgba(255, 255, 255, 0.5);
+    margin-left: 20px;
 
 }
 
@@ -597,8 +598,8 @@ h2 {
 }
 
 #matchesListUl div img {
-    width: 60px;
-    height: 55px;
+    width: 90px;
+    height: 85px;
     border-radius: 25%;
     margin: 0 15px;
 }
@@ -614,7 +615,7 @@ h2 {
 
 #matchesListUl a {
     color: white;
-    font-size: 25px;
+    font-size: 35px;
 }
 
 /* Dropdown Nav */
