--- a/views/users/images.handlebars
+++ b/views/users/images.handlebars
@@ -8,8 +8,10 @@
                 <input name="proPicFile" type="file" id="file-0" accept="image/*"  tabindex="0">
                 <label for="file-0" id="file-0-preview">
                     <img id="proPicPreview" alt="Place to upload your profile picture" src="../../../public/images/image-placeholder.png">
-                    <span>+</span>
                 </label>
+                <div id="file-0-upload">
+                    <span>+</span>
+                </div>
             </div>
             <h3 id="addPhotos">Additional Photos<br>(optional)</h3>
             <div class="otherPicsContainer">
@@ -17,22 +19,28 @@
                     <input type="file" id="file-1" accept="image/*">
                     <label for="file-1" id="file-1-preview">
                         <img alt="Place to upload an additional picture (1)" src="../../../public/images/image-placeholder.png">
-                        <span>+</span>
                     </label>
+                    <div id="file-1-upload">
+                        <span>+</span>
+                    </div>
                 </div>
                 <div class="form-element">
                     <input type="file" id="file-2" accept="image/*">
                     <label for="file-2" id="file-2-preview">
                         <img alt="Place to upload an additional picture (2)" src="../../../public/images/image-placeholder.png">
-                        <span>+</span>
                     </label>
+                    <div id="file-2-upload">
+                        <span>+</span>
+                    </div>
                 </div>
                 <div class="form-element">
                     <input type="file" id="file-3" accept="image/*">
                     <label for="file-3" id="file-3-preview">
                         <img alt="Place to upload an additional picture (3)" src="../../../public/images/image-placeholder.png">
-                        <span>+</span>
                     </label>
+                    <div id="file-3-upload">
+                        <span>+</span>
+                    </div>
                 </div>
             </div>
             <div class="form-group hidden" id="error-container">
