--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -426,7 +426,7 @@ h2 {
     max-height: fit-content;
     float: left;
     margin: 10px;
-    padding: 3px;
+    /*padding: 3px;*/
 }
 
 .grid .form-element input {
@@ -446,9 +446,10 @@ h2 {
     font-weight: 600;
 }
 
-.grid .form-element span {
+.preview {
     font-size: 30px;
-    /*width: max-content;*/
+    background-color: rgba(211,211,211,0.75);
+    width: 250px;
 }
 
 #imagesContainer h3 {
